<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/images" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/signup_form_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fname_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name_signup_et_hint"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/black"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lname_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name_signup_et_hint"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/black"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dob_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dob_signup_et_hint"
                    android:inputType="date"
                    android:textColorHint="@color/black"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number_signup_et_hint"
                    android:inputType="phone"
                    android:textColorHint="@color/black"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_line1_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street_address_signup_et_hint"
                    android:inputType="textPostalAddress"
                    android:textColorHint="@color/black"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_city_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_signup_et_hint"
                    android:inputType="textPostalAddress"
                    android:textColorHint="@color/black"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_state_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state_signup_et_hint"
                    android:inputType="textPostalAddress"
                    android:textColorHint="@color/black"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_zipcode_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zip_code_signup_et_hint"
                    android:inputType="number"
                    android:textColorHint="@color/black"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address_signup_et_hint"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/black"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_password_signup_et_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black"/>

                <Button
                    android:id="@+id/sign_up_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_btn_text"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <LinearLayout
                    android:id="@+id/signup_haveaccount_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_margin="10dp">
                <TextView
                    android:id="@+id/already_have_account_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"
                    />
                <TextView
                    android:id="@+id/already_have_account_sign_in_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign In"
                    android:textColor="@color/purple_700"
                    android:layout_marginStart="10dp"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>