<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/images" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_signup_et_hint"
            android:inputType="textPersonName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_signup_et_hint"
            android:inputType="textPersonName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address_signup_et_hint"
            android:inputType="textEmailAddress" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_password_signup_et_hint"
            android:inputType="textPassword" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_signup_et_hint"
            android:inputType="phone" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_line1_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_line_1_signup_et_hint"
            android:inputType="textPostalAddress" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_line2_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_line_2_signup_et_hint"
            android:inputType="textPostalAddress" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_city_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="City"
            android:inputType="textPostalAddress" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_state_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="State"
            android:inputType="textPostalAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SIGN UP"
                app:layout_constraintStart_toStartOf="parent"/>
            <Space
                android:layout_width="120dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LOGIN"
                app:layout_constraintEnd_toEndOf="parent"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="42dp"
            android:layout_height="667dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/search_btn_bottom_bar" />

        <Button
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/home_btn_bottom_bar" />

        <Button
            android:id="@+id/my_library_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/shelf_btn_bottom_bar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>